--- a/src/index.html
+++ b/src/index.html
@@ -11,11 +11,12 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet" href="https://i.icomoon.io/public/temp/3483662e3a/UntitledProject/style-svg.css">
 </head>
 
 <body class="mat-typography">
   <app-root></app-root>
-
+  <script defer src="https://i.icomoon.io/public/temp/3483662e3a/UntitledProject/svgxuse.js"></script>
 </body>
 
 </html>
